# vector

./: Dockerfile  pom.xml
scripts/: build-native.ps1  build-native.sh
src/main/java/pathcreator/proxy/: Main.java
src/main/java/pathcreator/proxy/example/: Codec.java  ExampleDto.java  SchemaCompiler.java  Ser.java
src/main/java/pathcreator/proxy/translate/: CommonStatic.java  Uid32.java  Uid32Fast.java  Uid32FastVtSafe.java
src/main/java/pathcreator/proxy/translate/load/: NativeLibraryLoader.java
src/main/java/pathcreator/proxy/uid/: Uid32.java
src/main/java/pathcreator/proxy/uid/bench/: Uid32Benchmark.java
src/main/java/pathcreator/proxy/uid/internal/: NativeTmp.java  Uid32Native.java  Uid32Symbols.java
src/main/java/pathcreator/proxy/uid/layout/: Uid32Layout.java
src/main/java/pathcreator/proxy/uid/read/: Uid32Checks.java  Uid32Fields.java  Uid32Reader.java  Uid32ReaderArray.java  Uid32ReaderSegment.java
src/main/java/pathcreator/proxy/util/nativeutil/: NativeLibraryLoader.java
src/main/native/c/uid32/: CMakeLists.txt  get_core_id.c  get_core_id.h  gettid.c  gettid.h  tsc.c  tsc.h  uid32.c  uid32.h
